@@ -69,6 +69,7 @@ class App : public KApplication, public EngineObserver
         void slotConfigGlobalShortcuts();
         void slotConfigToolBars();
         void slotConfigEffects( bool = true );
+        void slotConfigEqualizer();
         void firstRunWizard();
 
     private:
